@@ -42,6 +42,60 @@ check_desktop_filename()
 }
 
 # {{{ default browser
+# {{{ utility functions
+
+# This handles backslashes but not quote marks.
+first_word()
+{
+    read first rest
+    echo "$first"
+}
+
+binary_to_desktop_file()
+{
+    search="${XDG_DATA_HOME:-$HOME/.local/share}:${XDG_DATA_DIRS:-/usr/local/share:/usr/share}"
+    binary="`which "$1"`"
+    binary="`readlink -f "$binary"`"
+    base="`basename "$binary"`"
+    IFS=:
+    for dir in $search; do
+        unset IFS
+        [ "$dir" ] || continue
+        [ -d "$dir/applications" -o -d "$dir/applnk" ] || continue
+        for file in "$dir"/applications/*.desktop "$dir"/applnk/*.desktop; do
+            [ -r "$file" ] || continue
+            # Check to make sure it's worth the processing.
+            grep -q "^Exec.*$base" "$file" || continue
+            # Make sure it's a visible desktop file (e.g. not "preferred-web-browser.desktop").
+            grep -Eq "^(NoDisplay|Hidden)=true" "$file" && continue
+            command="`grep -E "^Exec(\[[^]=]*])?=" "$file" | cut -d= -f 2- | first_word`"
+            command="`which "$command"`"
+            if [ x"`readlink -f "$command"`" = x"$binary" ]; then
+                # Fix any double slashes that got added path composition
+                echo "$file" | sed -e 's,//*,/,g'
+                return
+            fi
+        done
+    done
+}
+
+desktop_file_to_binary()
+{
+    search="${XDG_DATA_HOME:-$HOME/.local/share}:${XDG_DATA_DIRS:-/usr/local/share:/usr/share}"
+    desktop="`basename "$1"`"
+    IFS=:
+    for dir in $search; do
+        unset IFS
+        [ "$dir" -a -d "$dir/applications" ] || continue
+        file="$dir/applications/$desktop"
+        [ -r "$file" ] || continue
+        # Remove any arguments (%F, %f, %U, %u, etc.).
+        command="`grep -E "^Exec(\[[^]=]*])?=" "$file" | cut -d= -f 2- | first_word`"
+        command="`which "$command"`"
+        readlink -f "$command"
+        return
+    done
+}
 
 # In order to remove an application from the automatically-generated list of
 # applications for handling a given MIME type, the desktop environment may copy
@@ -56,7 +110,7 @@ fix_local_desktop_file()
     apps="${XDG_DATA_HOME:-$HOME/.local/share}/applications"
     # No local desktop file?
     [ ! -f "$apps/$1" ] && return
-    MIME="`grep ^MimeType= "$apps/$1" | cut -d= -f 2-`"
+    MIME="`grep "^MimeType=" "$apps/$1" | cut -d= -f 2-`"
     case "$MIME" in
       text/html\;*|*\;text/html\;*|*\;text/html\;|*\;text/html)
         # Already has text/html? Great!
@@ -66,21 +120,24 @@ fix_local_desktop_file()
 
     # Add text/html to the list
     temp="`mktemp "$apps/$1.XXXXXX"`" || return
-    grep -v ^MimeType= "$apps/$1" >> "$temp"
+    grep -v "^MimeType=" "$apps/$1" >> "$temp"
     echo "MimeType=text/html;$MIME" >> "$temp"
 
     oldlines="`wc -l < "$apps/$1"`"
     newlines="`wc -l < "$temp"`"
-    # The new file should have at least as many lines as the old
+    # The new file should have at least as many lines as the old.
     if [ $oldlines -le $newlines ]; then
         mv "$temp" "$apps/$1"
-        # This can take a little bit to get noticed
+        # This can take a little bit to get noticed.
         sleep 4
     else
         rm -f "$temp"
         return 1
     fi
 }
+
+# }}} utility functions
+# {{{ MIME utilities
 
 xdg_mime_fixup()
 {
@@ -107,7 +164,7 @@ set_browser_mime()
     xdg_mime_fixup
     orig="`get_browser_mime`"
     # Fixing the local desktop file can actually change the default browser all
-    # by itself, so we fix it only after querying to find the current default
+    # by itself, so we fix it only after querying to find the current default.
     fix_local_desktop_file "$1" || return
     mkdir -p "${XDG_DATA_HOME:-$HOME/.local/share}/applications"
     xdg-mime default "$1" text/html || return
@@ -118,33 +175,41 @@ set_browser_mime()
     fi
 }
 
-parse_binary_or_desktop()
-{
-    binary="`echo "$binary" | first_word`"
-    desktop="`binary_to_desktop_file "$binary"`"
-    if [ "$desktop" ]; then
-        basename "$desktop"
-        exit_success
-    fi
-    binary="`which "$binary"`"
-    if [ "$binary" ]; then
-        echo "$binary"
-        exit_success
-    fi
-    exit_failure_operation_failed
-}
+# }}} MIME utilities
+# {{{ KDE
 
+# Resolves the KDE browser setting to a binary: if prefixed with !, simply removes it;
+# otherwise, uses desktop_file_to_binary to get the binary out of the desktop file.
 resolve_kde_browser()
 {
-    echo "$browser" | grep -q '^!'
-    if [ $? -ne 0 ]; then
-        echo "$browser"
-    else
-        binary="${browser#!}"
-        parse_binary_or_desktop
-    fi
+    [ -z "$browser" ] && return
+    case "$browser" in
+      !*)
+        echo "${browser#!}"
+        ;;
+      *)
+        desktop_file_to_binary "$browser"
+        ;;
+    esac
 }
 
+# Does the opposite of resolve_kde_browser: if prefixed with !, tries to find a desktop
+# file corresponding to the binary, otherwise just returns the desktop file name.
+resolve_kde_browser_desktop()
+{
+    [ -z "$browser" ] && return
+    case "$browser" in
+      !*)
+        desktop="`binary_to_desktop_file "${browser#!}"`"
+        basename "$desktop"
+        ;;
+      *)
+        echo "$browser"
+        ;;
+    esac
+}
+
+# Reads the KDE browser setting, compensating for a bug in some versions of kreadconfig.
 read_kde_browser()
 {
     browser="`kreadconfig --file kdeglobals --group General --key BrowserApplication`"
@@ -152,11 +217,11 @@ read_kde_browser()
         echo "$browser"
     fi
     # kreadconfig in KDE 4 may not notice Key[$*]=... localized settings, so check
-    # by hand if it didn't find anything (oddly kwriteconfig works fine though)
+    # by hand if it didn't find anything (oddly kwriteconfig works fine though).
     kdeglobals_dir=`kde4-config --path config  | cut -d ':' -f 1`
     kdeglobals="$kdeglobals_dir/kdeglobals"
     [ ! -f "$kdeglobals" ] && return
-    # This will only take the first value if there is more than one
+    # This will only take the first value if there is more than one.
     grep '^BrowserApplication\[$[^]=]*\]=' "$kdeglobals" | head -n 1 | cut -d= -f 2-
 }
 
@@ -164,25 +229,31 @@ get_browser_kde()
 {
     browser="`read_kde_browser`"
     if [ x"$browser" = x ]; then
-        # No explicit default browser; KDE will use the MIME type text/html
+        # No explicit default browser; KDE will use the MIME type text/html.
         get_browser_mime
     else
-        resolve_kde_browser
+        resolve_kde_browser_desktop
     fi
 }
 
 check_browser_kde()
 {
+    check="`desktop_file_to_binary "$1"`"
+    if [ -z "$check" ]; then
+        echo no
+        exit_success
+    fi
     browser="`read_kde_browser`"
-    browser="`resolve_kde_browser`"
+    binary="`resolve_kde_browser`"
     # Because KDE will use the handler for MIME type text/html if this value
-    # is empty, we allow either the empty string or a match to $1 here
-    if [ x"$browser" != x -a x"$browser" != x"$1" ]; then
+    # is empty, we allow either the empty string or a match to $check here.
+    if [ x"$binary" != x -a x"$binary" != x"$check" ]; then
         echo no
         exit_success
     fi
     browser="`get_browser_mime`"
-    if [ x"$browser" != x"$1" ]; then
+    binary="`desktop_file_to_binary "$browser"`"
+    if [ x"$binary" != x"$check" ]; then
         echo no
         exit_success
     fi
@@ -196,88 +267,47 @@ set_browser_kde()
     kwriteconfig --file kdeglobals --group General --key BrowserApplication "$1"
 }
 
-# This handles backslashes but not quote marks
-first_word()
-{
-    read first rest
-    echo "$first"
-}
-
-binary_to_desktop_file()
-{
-    search="${XDG_DATA_HOME:-$HOME/.local/share}:${XDG_DATA_DIRS:-/usr/local/share:/usr/share}"
-    binary="`which "$1"`"
-    base="`basename "$1"`"
-    IFS=:
-    for dir in $search; do
-        unset IFS
-        [ "$dir" -a -d "$dir/applications" ] || continue
-        for file in "$dir"/applications/*.desktop; do
-            [ -r "$file" ] || continue
-            # Check to make sure it's worth the processing
-            grep -q "^Exec.*$base" "$file" || continue
-            # Make sure it's a visible desktop file (e.g. not "preferred-web-browser.desktop")
-            grep -q "^NoDisplay=true" "$file" && continue
-            command="`grep "^Exec\(\[[^]=]*]\)\?=" "$file" | cut -d= -f 2- | first_word`"
-            full="`which "$command"`"
-            if [ x"$full" = x"$binary" ]; then
-                # Fix any double slashes that got added path composition
-                echo "$file" | sed -e 's,//*,/,g'
-                return
-            fi
-        done
-    done
-}
-
-desktop_file_to_command()
-{
-    search="${XDG_DATA_HOME:-$HOME/.local/share}:${XDG_DATA_DIRS:-/usr/local/share:/usr/share}"
-    desktop="`basename "$1"`"
-    IFS=:
-    for dir in $search; do
-        unset IFS
-        [ "$dir" -a -d "$dir/applications" ] || continue
-        file="$dir/applications/$desktop"
-        [ -r "$file" ] || continue
-        # Change %F, %f, %U, and %u to %s
-        grep "^Exec\(\[[^]=]*]\)\?=" "$file" | cut -d= -f 2- | sed -e 's/%[FfUu]/%s/g'
-        return
-    done
-}
+# }}} KDE
+# {{{ GNOME
 
 get_browser_gnome()
 {
-    binary="`gconftool-2 --get /desktop/gnome/applications/browser/exec`"
+    binary="`gconftool-2 --get /desktop/gnome/applications/browser/exec | first_word`"
     if [ x"$binary" = x ]; then
-        # No default browser; GNOME might use the MIME type text/html
+        # No default browser; GNOME might use the MIME type text/html.
         get_browser_mime
     else
         # gconftool gives the binary (maybe with %s etc. afterward),
         # but we want the desktop file name, not the binary. So, we
         # have to find the desktop file to which it corresponds.
-        parse_binary_or_desktop
+        desktop="`binary_to_desktop_file "$binary"`"
+        basename "$desktop"
     fi
 }
 
 check_browser_gnome()
 {
-    binary="`gconftool-2 --get /desktop/gnome/applications/browser/exec`"
-    browser="`parse_binary_or_desktop`"
-    if [ x"$browser" != x"$1" ]; then
+    check="`desktop_file_to_binary "$1"`"
+    if [ -z "$check" ]; then
         echo no
         exit_success
     fi
-    # Check HTTP and HTTPS, but not about: and unknown:
+    binary="`gconftool-2 --get /desktop/gnome/applications/browser/exec | first_word`"
+    if [ x"$binary" != x"$check" ]; then
+        echo no
+        exit_success
+    fi
+    # Check HTTP and HTTPS, but not about: and unknown:.
     for protocol in http https; do
         binary="`gconftool-2 --get /desktop/gnome/url-handlers/$protocol/command | first_word`"
-        browser="`parse_binary_or_desktop`"
-        if [ x"$browser" != x"$1" ]; then
+        if [ x"$binary" != x"$check" ]; then
             echo no
             exit_success
         fi
     done
     browser="`get_browser_mime`"
-    if [ x"$browser" != x"$1" ]; then
+    binary="`desktop_file_to_binary "$browser"`"
+    if [ x"$binary" != x"$check" ]; then
         echo no
         exit_success
     fi
@@ -287,26 +317,28 @@ check_browser_gnome()
 
 set_browser_gnome()
 {
-    command="`desktop_file_to_command "$1"`"
-    [ "$command" ] || exit_failure_file_missing
-    binary="`echo "$command" | first_word`"
+    binary="`desktop_file_to_binary "$1"`"
+    [ "$binary" ] || exit_failure_file_missing
     set_browser_mime "$1" || return
 
-    # Set the default browser
+    # Set the default browser.
     gconftool-2 --type string --set /desktop/gnome/applications/browser/exec "$binary"
     gconftool-2 --type bool --set /desktop/gnome/applications/browser/needs_term false
     gconftool-2 --type bool --set /desktop/gnome/applications/browser/nremote true
-    # Set the handler for HTTP and HTTPS
+    # Set the handler for HTTP and HTTPS.
     for protocol in http https; do
-        gconftool-2 --type string --set /desktop/gnome/url-handlers/$protocol/command "$command"
+        gconftool-2 --type string --set /desktop/gnome/url-handlers/$protocol/command "$binary"
         gconftool-2 --type bool --set /desktop/gnome/url-handlers/$protocol/needs_terminal false
         gconftool-2 --type bool --set /desktop/gnome/url-handlers/$protocol/enabled true
     done
-    # Set the handler for about: and unknown URL types
+    # Set the handler for about: and unknown URL types.
     for protocol in about unknown; do
-        gconftool-2 --type string --set /desktop/gnome/url-handlers/$protocol/command "$command"
+        gconftool-2 --type string --set /desktop/gnome/url-handlers/$protocol/command "$binary"
     done
 }
+
+# }}} GNOME
+# {{{ xfce
 
 get_browser_xfce()
 {
@@ -349,7 +381,7 @@ check_xfce_desktop_file()
         unset IFS
         [ "$dir" -a -d "$dir/xfce4/helpers" ] || continue
         file="$dir/xfce4/helpers/$1"
-        # We have the file, no need to create it
+        # We have the file, no need to create it.
         [ -r "$file" ] && return
     done
     IFS=:
@@ -358,14 +390,14 @@ check_xfce_desktop_file()
         [ "$dir" -a -d "$dir/applications" ] || continue
         file="$dir/applications/$1"
         if [ -r "$file" ]; then
-            # Found a file to convert
+            # Found a file to convert.
             target="${XDG_DATA_HOME:-$HOME/.local/share}/xfce4/helpers"
             mkdir -p "$target"
             grep -v "^Type=" "$file" > "$target/$1"
             echo "Type=X-XFCE-Helper" >> "$target/$1"
             echo "X-XFCE-Category=WebBrowser" >> "$target/$1"
-            # Change %F, %f, %U, and %u to "%s"
-            command="`grep "^Exec\(\[[^]=]*]\)\?=" "$file" | cut -d= -f 2- | sed -e 's/%[FfUu]/"%s"/g'`"
+            # Change %F, %f, %U, and %u to "%s".
+            command="`grep -E "^Exec(\[[^]=]*])?=" "$file" | cut -d= -f 2- | sed -e 's/%[FfUu]/"%s"/g'`"
             echo "X-XFCE-Commands=`echo "$command" | first_word`" >> "$target/$1"
             echo "X-XFCE-CommandsWithParameter=$command" >> "$target/$1"
             return
@@ -384,18 +416,18 @@ set_browser_xfce()
     fi
 
     helpers_rc="$helper_dir/helpers.rc"
-    # Create the file if it does not exist to avoid special cases below
+    # Create the file if it does not exist to avoid special cases below.
     if [ ! -r "$helpers_rc" ]; then
         touch "$helpers_rc" || exit_failure_operation_failed
     fi
 
     temp="`mktemp "$helpers_rc.XXXXXX"`" || return
-    grep -v ^WebBrowser= "$helpers_rc" >> "$temp"
+    grep -v "^WebBrowser=" "$helpers_rc" >> "$temp"
     echo "WebBrowser=${1%.desktop}" >> "$temp"
 
     oldlines="`wc -l < "$helpers_rc"`"
     newlines="`wc -l < "$temp"`"
-    # The new file should have at least as many lines as the old
+    # The new file should have at least as many lines as the old.
     if [ $oldlines -le $newlines ]; then
         mv "$temp" "$helpers_rc"
     else
@@ -404,11 +436,12 @@ set_browser_xfce()
     fi
 }
 
+# }}} xfce
 # }}} default browser
 
 dispatch_specific()
 {
-    # The PARM comments in this function are used to generate the output of
+    # The PROP comments in this function are used to generate the output of
     # the --list option. The formatting is important. Make sure to line up the
     # property descriptions with spaces so that it will look nice.
     if [ x"$op" = x"get" ]; then
@@ -455,30 +488,46 @@ dispatch_specific()
 
 dispatch_generic()
 {
-    # We only know how to get the default web browser
-    [ x"$op" != x"get" ] && exit_failure_operation_impossible
+    # We only know how to get or check the default web browser.
+    [ x"$op" != x"get" -a x"$op" != x"check" ] && exit_failure_operation_impossible
     [ x"$parm" != x"default-web-browser" ] && exit_failure_operation_impossible
-
-    # FIXME: look up the desktop file name
 
     # First look in $BROWSER
     if [ x"$BROWSER" != x ]; then
-        echo "${BROWSER%%:*}"
-        exit_success
+        binary="`which "${BROWSER%%:*}"`"
+    else
+        # Debian and Ubuntu (and others?) have x-www-browser.
+        binary="`which x-www-browser`"
     fi
 
-    # Debian and Ubuntu (and others?) have x-www-browser
-    browser="`which x-www-browser`"
-    [ "$browser" ] || exit_failure_operation_failed
-    browser="`readlink -f "$browser"`"
+    [ "$binary" ] || exit_failure_operation_failed
 
-    echo "$browser"
+    binary="`readlink -f "$binary"`"
+
+    [ "$binary" ] || exit_failure_operation_failed
+
+    if [ x"$op" = x"get" ]; then
+        desktop="`binary_to_desktop_file "$binary"`"
+        basename "$desktop"
+    else
+        # $op = "check"
+        check="`desktop_file_to_binary "$1"`"
+        if [ -z "$check" ]; then
+            echo no
+            exit_success
+        fi
+        if [ x"$binary" != x"$check" ]; then
+            echo no
+            exit_success
+        fi
+        echo yes
+    fi
     exit_success
 }
 
 if [ x"$1" = x"--list" ]; then
     echo "Known properties:"
-    # Extract the property names from dispatch_specific() above
+    # Extract the property names from dispatch_specific() above.
     grep "^[ 	]*[^)]*) # PROP:" "$0" | sed -e 's/^[ 	]*\([^)]*\)) # PROP: \(.*\)$/  \1 \2/' | sort
     exit_success
 fi
