@@ -1,10 +1,17 @@
 === xdg-utils 1.x.x ====
 
+2009-10-12 Fathi Boudra <fabo@freedesktop.org>
+   * Update xdg-settings - Thanks to Mike Mammarella:
+     This fixes some issues where user-generated icons would be detected as
+     the official .desktop file for a binary, rather than the actual version.
+     (It resolves forward and compares binaries rather than resolving backward
+     to a .desktop file from a binary.)
+
 2009-08-25 Fathi Boudra <fabo@freedesktop.org>
    * Fix hardcoded KDE home directory. Use kde(4)-config to get path.
 
 2009-08-25 Fathi Boudra <fabo@freedesktop.org>
-   * Apply patch form Mike Mammarella <mdm@chromium.org> to fix 2 issues:
+   * Apply patch from Mike Mammarella <mdm@chromium.org> to fix 2 issues:
      - skip invisible desktop files when looking up the default web browser in
        GNOME. (http://codereview.chromium.org/159738)
      - check for localized settings by hand in xdg-settings if kreadconfig
